# serializer version: 1
# name: test_diagnostics[P1-2W]
  dict({
    'data': dict({
      'Device_Type': 0,
      'SN': '**REDACTED**',
      'a_act_power': 0,
      'a_act_ret_power': 2.95,
      'a_current': 12,
      'a_voltage': 237,
      'b_act_power': 0,
      'b_act_ret_power': 0,
      'b_current': 0,
      'b_voltage': 237,
      'c_act_power': 0,
      'c_act_ret_power': 0,
      'c_current': 0,
      'c_voltage': 236,
      'device': dict({
        'fw': 'LSW3_01_E030_SS_00_00.00.00.03',
        'hostname': 'admin',
        'mac': 'MAC234567891',
        'run_time': 839,
        'sn': '**REDACTED**',
        'time': '2024-11-26 19:14:23',
        'time_stamp': 1732648463,
        'timezone': 480,
        'type': 'P1-2W',
      }),
      'device_version ': '50',
      'total_act_energy_LT': 53754.58,
      'total_act_energy_NT': 9818.93,
      'total_act_power': 0,
      'total_act_ret_energy_LT': 53754.58,
      'total_act_ret_energy_NT': 9818.93,
      'total_act_ret_power': 2.94,
      'total_gas': 0,
    }),
    'entry': dict({
      'fw_version': 'LSW3_01_E030_SS_00_00.00.00.03',
      'host': '192.168.1.100',
      'model': 'P1-2W',
      'port': 8080,
      'sn': '**REDACTED**',
    }),
  })
# ---
# name: test_diagnostics[SP-2W-EU]
  dict({
    'data': dict({
      'electric_current': 0,
      'fw': 'LSW3_01_E030_SS_00_00.00.00.03',
      'hostname': 'admin',
      'mac': 'MAC123456789',
      'positive_active_energy': 1.730654,
      'power': 1.217517,
      'reverse_active_energy': 0.0,
      'run_time': 839,
      'sn': '**REDACTED**',
      'time': '2024-11-26 19:14:23',
      'time_stamp': 1732648463,
      'timezone': 480,
      'type': 'SP-2W-EU',
      'voltage': 230,
    }),
    'entry': dict({
      'fw_version': 'LSW3_01_E030_SS_00_00.00.00.03',
      'host': '192.168.1.100',
      'model': 'SP-2W-EU',
      'port': 8080,
      'sn': '**REDACTED**',
    }),
  })
# ---
# name: test_diagnostics[gl meter]
  dict({
    'data': dict({
      'SN': '**REDACTED**',
      'active power': 133.5,
      'apparent power': 209.6,
      'current': 0.66,
      'frequency': 50.03,
      'fw': 'LSW3_01_E030_SS_00_00.00.00.03',
      'hostname': 'admin',
      'mac': 'MAC345678912',
      'power factor': 0.63,
      'reactive power': -29.8,
      'run_time': 839,
      'sn': '**REDACTED**',
      'time': '2024-11-26 19:14:23',
      'time_stamp': 1732648463,
      'timezone': 480,
      'total_act_energy': 3.53,
      'total_act_ret_energy': 0.18,
      'type': 'gl meter',
      'voltage': 229.87,
    }),
    'entry': dict({
      'fw_version': 'LSW3_01_E030_SS_00_00.00.00.03',
      'host': '192.168.1.100',
      'model': 'gl meter',
      'port': 8080,
      'sn': '**REDACTED**',
    }),
  })
# ---
